# SmartBidPro

./: .gitignore  README.md  package-lock.json  package.json
app/: globals.css  page.tsx
app/admin/create-tender/: page.tsx
app/admin/dashboard/: page.tsx
app/dashboard/: page.tsx
app/login/: page.tsx
backend/: Cargo.toml
backend/src/: auth.rs  main.rs  models.rs
backend/src/routes/: auctions.rs  auth.rs  bids.rs  compliance.rs  mod.rs  private_bids.rs
components/: AIComplianceAnalysis.tsx
fabric/: README.md
fabric/chaincode/smartbidpro/: go.mod  main.go
fabric/collections/: collections_config.json
fabric/gateway/: .gitignore  package-lock.json  package.json
fabric/gateway/src/: AppUtil.js  enroll.js  index.js
lib/: mockData.ts
scripts/: create-test-user.js
