[package]
name = "smartbidpro-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
mongodb = "3.1.0"
tokio = { version = "1.41", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonwebtoken = "9.3"
bcrypt = "0.16"
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
rocket_cors = "0.6.0"
futures = "0.3.30"
